


-------------------------------------------------------------------
2.2.5:
-Tweaks to mining calculator setups
-Upgraded binance API to v3
-Multi proxy support for API calls
-Minor bug fixes / cleanup
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.6:
-Alerts / checkups on proxy failure
-Simplified / highly compatible proxy config settings
-IDEX and HOTBIT exchange API support
-Optimized API caching
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.7:
-Proxy checkup compatibility (for CLI cron jobs)
-Tradeogre / Bigone / Bitforex markets API support
-Removed request params from API error notices in the UI
-Proxy alert type setting
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.8:
-Tweaks, bug fixes, optimizations
-Quick market pairing selection change in UI
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.9:
-Exchange market volume data (included in UI / alerts)
-UI tweaks
-Bug fixes
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.0:
-UI + backend tweaks / bug fixes
-SMTP email setting option
-Organized / categorized back end functions, config file settings
-Proxy user/pass option
-Bitcoin / Litecoin mining calculators
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.1:
-Tweaks
-Error log system, with emailing support
-------------------------------------------------------------------






















































































